[ECLIPSE] Cập nhật thư mục i18n
- Bắt lỗi và thể hiện tiếng Việt, tiếng Anh vào thư mục i18n

--- a/ConverseStore_Java6/src/main/resources/i18n/global.properties
+++ b/ConverseStore_Java6/src/main/resources/i18n/global.properties
@@ -16,6 +16,26 @@
 	nav.order=YOUR ORDER
 	
 #menu_ADMIN
+    nav.qlnguoidung =
+    nav.nguoidung=User
+	nav.qlnhacungcap =
+	nav.qlkhuyenmai = 
+	nav.khuyenmai=
+	nav.qlsanpham=
+	nav.danhmuc=
+	nav.thuonghieu=
+	nav.sizesp=
+	nav.mausp=
+	nav.sanpham=
+	nav.spchitiet=
+	nav.qldonhang=
+	nav.donhang=
+	nav.donhangdagiao=
+	nav.qlbinhluan=
+	nav.qltaikhoan=
+	nav.doimk=Change pass
+	nav.thongtincanhan= Information
+
 
 
 #Home
