--- a/ConverseStore_Java6/src/main/resources/i18n/global_vi.properties
+++ b/ConverseStore_Java6/src/main/resources/i18n/global_vi.properties
@@ -16,7 +16,25 @@
 	nav.order=ĐƠN HÀNG
 	
 #menu_ADMIN
-
+    nav.qlnguoidung =Quản lý người dùng
+    nav.nguoidung=Người dùng
+	nav.qlnhacungcap =Quản lý nhà cung cấp
+	nav.qlkhuyenmai = Quản lý khuyến mãi
+	nav.khuyenmai=Khuyến mãi
+	nav.qlsanpham=Quản lý sản phẩm
+	nav.danhmuc=Danh mục
+	nav.thuonghieu=Thương hiệu
+	nav.sizesp=Size
+	nav.mausp=Màu
+	nav.sanpham=Sản phẩm
+	nav.spchitiet=Sản phẩm chi tiết
+	nav.qldonhang=Quản lý đơn hàng
+	nav.donhang=Đơn hàng
+	nav.donhangdagiao=Đơn hàng đã giao
+	nav.qlbinhluan=Quản lý bình luận
+	nav.qltaikhoan=Quản lý tài khoản
+	nav.doimk=Đổi mật khẩu
+	nav.thongtincanhan=Thông tin cá nhân
 
 	#Home
 	home.title=TRANG CHỦ
