--- a/ConverseStore_Java6/src/main/resources/i18n/messages.properties
+++ b/ConverseStore_Java6/src/main/resources/i18n/messages.properties
@@ -8,6 +8,41 @@ NotNull.Student3.gender = Please choose your Gender
 NotBlank.Student3.country = Please choose your Country
 
 #quangminh start
+#brands
+NotBlank.Brands.brandName=Brand name cannot be blank
+Size.DanhMuc.brandName=Brand name must be less than 50 characters
+NotBlank.Brands.brandImage=Please select picture
+NotNull.Brands.brandActivities=Please select activities
 
+#categories
+NotBlank.Categories.categoryName=Category name cannot be blank
+Size.Categories.categoryName=Category name must be less than 50 characters
+NotBlank.Categories.categoryImage=Please select picture
+NotNull.Categories.categoryActivities=Please select activities
+
+#colors
+NotBlank.Colors.colorName=Color name cannot be blank
+Size.Colors.colorName=Color name must be less than 50 characters
+NotNull.Colors.colorActivities=Please select activities
+
+#products
+NotBlank.Products.productName=Product name cannot be blank
+Size.Products.productName=Product name must be less than 50 characters
+NotNull.Products.gia=Price cannot be null
+Min.Products.gia=Price must be more than 0 VND
+NotBlank.Products.productImage1=Please select picture 1
+NotBlank.Products.productImage2=Please select picture 2
+NotBlank.Products.productImage3=Please select picture 3
+NotNull.Products.productType=Please choose product type
+NotNull.Products.productActivities=Please select activities
+
+#product_variants
+NotNull.Products.quantity= Please enter product quantity
+Min.Products.quantity=The quantity must be greater than 0
+
+#sizes
+NotBlank.Sizes.sizeName=Size number cannot be blank
+Size.Sizes.sizeName=Size number must be less than 50 characters
+NotNull.Sizes.sizeActivities=Please select activities
 
 #quangminh end
