[ECLIPSE]_MODEL_Cập nhật các model, bổ xung file message.properties
Các model:
+Order
+OderDetail
+Receivers
+Cart
+CartItem

--- a/ConverseStore_Java6/src/main/resources/i18n/messages.properties
+++ b/ConverseStore_Java6/src/main/resources/i18n/messages.properties
@@ -11,3 +11,11 @@ NotBlank.Student3.country = Please choose your Country
 
 
 #quangminh end
+
+#longHai start
+
+NotEmty.Receiver.name = Please enter your name
+NotEmty.Receiver.phone = Please enter your phone
+NotEmty.Receiver.address = Please enter your address
+
+#longHai end
