--- a/ConverseStore_Java6/src/main/resources/i18n/messages_vi.properties
+++ b/ConverseStore_Java6/src/main/resources/i18n/messages_vi.properties
@@ -11,3 +11,11 @@ NotBlank.Student3.country = Chưa chọn quê quán
 
 
 #quangminh end
+
+#longHai start
+
+NotEmty.Receiver.name = Vui nhập tên người nhận 
+NotEmty.Receiver.phone = Vui nhập số điện thoại
+NotEmty.Receiver.address = Vui nhập địa chỉ
+
+#longHai end
