[ECLIPSE] Đa ngôn ngữ
- Thêm đa ngôn ngữ cho các trang: trang chủ, sản phẩm, sản phẩm chi tiết, giới thiệu, giỏ hàng, ngôn ngữ, đăng nhập, đăng ký, quên mật khẩu

--- a/ConverseStore_Java6/src/main/resources/i18n/global.properties
+++ b/ConverseStore_Java6/src/main/resources/i18n/global.properties
@@ -16,32 +16,161 @@
 	nav.order=YOUR ORDER
 	
 #menu_ADMIN
-    nav.qlnguoidung =
+    nav.qlnguoidung = customers
     nav.nguoidung=User
-	nav.qlnhacungcap =
-	nav.qlkhuyenmai = 
-	nav.khuyenmai=
-	nav.qlsanpham=
-	nav.danhmuc=
-	nav.thuonghieu=
-	nav.sizesp=
-	nav.mausp=
-	nav.sanpham=
-	nav.spchitiet=
-	nav.qldonhang=
-	nav.donhang=
-	nav.donhangdagiao=
-	nav.qlbinhluan=
-	nav.qltaikhoan=
+	nav.qlnhacungcap = suppliers
+	nav.qlkhuyenmai = promotions
+	nav.khuyenmai=promotionsss
+	nav.qlsanpham=Products
+	nav.danhmuc= Category
+	nav.thuonghieu= Brand
+	nav.sizesp= Size
+	nav.mausp= Color
+	nav.sanpham= Product
+	nav.spchitiet= Product Variant
+	nav.qldonhang=carts
+	nav.donhang=orders
+	nav.donhangdagiao=receivers
+	nav.qlbinhluan=comments
+	nav.qltaikhoan=account
 	nav.doimk=Change pass
 	nav.thongtincanhan= Information
+	
+	nav.nav1= GENUINE AVAILABLE GOODS
+	nav.nav2=  FLEXIBLE RETURNS
+	nav.nav3= NATIONWIDE DELIVERY
+	nav.nav4= Converse hello everyone, Welcome to our store. We Always put prestige on top of customers, hope them I will be at your service. Thank you!
 
+#Footer
+	foot.foot1=Find the answer to the limitless durability that CONVERSE has always strived to continue to develop. It is the ideal of robustness, function and operability combined with absolute rigidity. This ideal is the source of the rigidity that CONVERSE has always sought.
+	foot.footTitle2=STORE IN HANOI
+	foot.foot2Sub1=187 Vong Street, Hai Ba Trung, Hanoi.
+	foot.foot2Sub2=187 Vong Street-Quan Hai Ba Trung-Hanoi.
+	foot.foot2Sub3=82 Cau Giay, Quan Hoa, Cau Giay.
+	foot.footTitle3=STORE IN TP.HCM
+	foot.foot3Sub1=497 Hoang Van Thu, Ward 4, Tan Binh District, HCMC.
+	foot.foot3Sub2=676 Le Trong Tan, Binh Hung Hoa Ward, Binh Tan District, HCM.
+	foot.foot3Sub3=20 3/2 Street, Ward 12, District 10, HCMC.
+	foot.footTitle4=CONTACT
+	foot.foot4Sub1=CONVERSEvietnam.net@gmail.com
+	foot.foot4Sub2=0105517236
 
+	#Trang chủ
+	home.bosuutap= COLLECTION
+	home.danhmuc=CATEGORY
+	home.productsale= TOP SALE
+	home.brand= BRAND
+	
+	home.sub1=COMMITMENT TO SELL ONLY GENUINE CONVERSE SHOES
+	home.sub11=You can contact the store to check the code freely before buying the product
+	home.sub2=3 MONTH SHOES WARRANTY
+	home.sub22=so you can use it with confidence. Please read the terms carefully
+	home.sub3=RETURN WITHIN 3 DAYS
+	home.sub33=Product return is flexible.But please read the terms carefully
+	home.sub4=SHIP NATIONWIDE THROUGH MANY CHANNEL
+	home.sub44=Flexible for you to receive goods can pay COD or transfer
+	
+	home.slide1=UP TO 70% OFF
+	home.slide11=SALE UP TO 70% SUPER HOT VANS MODELS
+	home.slide2=ONLY SALE GENUINE SHOES ONLY HOT NEW MODELS
+	home.slide22=INTO THE STORE
 
-#Home
-home.title=HOME PAGE
-home.content=This is home page
-
-#about
-about.title=About Us
-about.content=This is introduction page
+	#Sản phẩm
+	ssanpham.category=CATEGORIES
+	ssanpham.productType=PRODUCT TYPE
+	ssanpham.brand= BRANDS
+	ssanpham.locsp=FILTER US PRODUCTS
+	
+	ssanpham.chitiet= Detail
+	ssanpham.yeuthich= Favourite
+	
+	#Sản phẩm chi tiết 
+	spchitiet.gia=Price:
+	spchitiet.mota=Description:
+	spchitiet.size=Size:
+	spchitiet.mau=Color:
+	spchitiet.soluong=Quantity:
+	spchitiet.yeuthich=Add to favotite
+	spchitiet.bangsize=Size Guide
+	spchitiet.cart=Add to cart
+	
+	spchitiet.binhluan= COMMENT
+	spchitiet.sptuongtu= SIMILAR PRODUCT
+	spchitiet.hdsize= INSTRUCTIONS FOR SELECTION OF SIZE
+	
+	#Giới thiệu
+	gioithieu.title= Hi, we are CONVERSE!
+	gioithieu.titleSub=Pleasure to serve you
+	gioithieu.titleContent=We turn indispensable accessories into inspirational spiritual symbols, to motivate the young generation of Vietnam to constantly move forward.
+	
+	gioithieu.whynot=WHY NOT?
+	gioithieu.whynot1=That was our question at the start.
+	gioithieu.whynot2=And also the spirit of "Why not" we aspire to convey
+	gioithieu.whynot3=With products designed with enthusiasm, desire and creative minds of the main team of young Vietnamese people, we believe that the spirit of "Why not" will always accompany and inspire you. everyday.
+	
+	gioithieu.title1= Enterprising
+	gioithieu.content1=With the desire to become your companion, we believe that we must have the courage to overcome challenges, dare to think, dare to lead and be different.
+	gioithieu.title2= Start and end with the customer
+	gioithieu.content2=With the spirit of warriors, we always fight with ourselves every day to bring the most “WOW” experiences to young Vietnamese people.
+	gioithieu.title3=Inspire
+	gioithieu.content3=The future for us is world-class products, a young Vietnamese generation full of confidence to pursue their passion, is "Why not?" become everyone's philosophy.
+	
+	#Giỏ hàng
+	ggiohang.hinh= IMAGE
+	ggiohang.ten= NAME
+	ggiohang.gia= PRICE
+	ggiohang.soluong= QUANTITY
+	ggiohang.tamtinh= PROVISIONAL
+	ggiohang.conggiohang= CART
+	ggiohang.giamgia= DISCOUNT
+	ggiohang.tong= SUM
+	ggiohang.thanhtoan= PAY
+	
+	#Đăng nhập
+	ddangnhap.dangnhap= SIGN IN
+	ddangnhap.email= Email:
+	ddangnhap.matkhau= Password:
+	ddangnhap.luutaikhoan= Remeber Me?
+	ddangnhap.quenmk= Forgot Password?
+	ddangnhap.chuacotk= Do not have an account? 
+	ddangnhap.dkngay=Register now
+	
+	#Đăng ký
+	ddangky.dangky=	SIGN UP
+	ddangky.hovaten=Fullname:
+	ddangky.email= Email:
+	ddangky.matkhau=Password:
+	ddangky.xacnhanmk=Confirm password:
+	ddangky.quenmk=Forgot Password:
+	ddangky.chuacotk=Do you already have an account?
+	ddangky.dnngay=Login now
+	
+#	ĐỔi mật khẩu
+	ddoimatkhau.doimatkhau= CHANGE YOUR PASSWORD
+	ddoimatkhau.email= Email:
+	ddoimatkhau.matkhaucu= Old pass:
+	ddoimatkhau.matkhaumoi= New pass:
+	ddoimatkhau.xacnhanmk= Confirm password:
+	ddoimatkhau.quayvetrangchu= Back to home page
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
