[ECLIPSE] Đa ngôn ngữ cập nhật
- Thêm form đổi mật khẩu, quên mật khẩu, đăng nhập, đăng ký

--- a/ConverseStore_Java6/src/main/resources/i18n/global.properties
+++ b/ConverseStore_Java6/src/main/resources/i18n/global.properties
@@ -148,11 +148,18 @@
 #	ĐỔi mật khẩu
 	ddoimatkhau.doimatkhau= CHANGE YOUR PASSWORD
 	ddoimatkhau.email= Email:
-	ddoimatkhau.matkhaucu= Old pass:
-	ddoimatkhau.matkhaumoi= New pass:
+	ddoimatkhau.matkhaucu= Old password:
+	ddoimatkhau.matkhaumoi= New password:
 	ddoimatkhau.xacnhanmk= Confirm password:
 	ddoimatkhau.quayvetrangchu= Back to home page
 	
+	#Quên mật khẩu
+	qquenmk.quenmk= FORGOT PASSWORD
+	qquenmk.subtitle=Please enter your email and we will send you the password.
+	qquenmk.email=Email:
+	qquenmk.dangnhap=Sign In
+	qquenmk.hoac=or
+	qquenmk.dangky= Sign Up
 	
 	
 	
