--- a/ConverseStore_Java6/src/main/resources/i18n/global_vi.properties
+++ b/ConverseStore_Java6/src/main/resources/i18n/global_vi.properties
@@ -153,7 +153,13 @@ foot.foot4Sub2=0105517236
 	ddoimatkhau.xacnhanmk= Xác nhận mật khẩu:
 	ddoimatkhau.quayvetrangchu= Quay về trang chủ
 	
-	
+	#Quên mật khẩu
+	qquenmk.quenmk= QUÊN MẬT KHẨU
+	qquenmk.subtitle=Vui lòng nhập email chúng tôi sẽ gửi mật khẩu đến cho bạn.
+	qquenmk.email=Email:
+	qquenmk.dangnhap=Đăng nhập
+	qquenmk.hoac=hoặc
+	qquenmk.dangky= Đăng ký
 	
 	
 	
