[ECLIPSE] File word, hiển thị sản phẩm
- Chỉnh sửa file word phần giao diện, sql
- Hiển thị sản phẩm đang hoạt động lên trang người dùng
- Hiển thị size, màu, thương hiệu, danh mục đang hoạt động lên trang người dùng

--- a/ConverseStore_Java6/src/main/resources/i18n/global.properties
+++ b/ConverseStore_Java6/src/main/resources/i18n/global.properties
@@ -129,11 +129,15 @@
 	#Đăng nhập
 	ddangnhap.dangnhap= SIGN IN
 	ddangnhap.email= Email:
+	ddangnhap.emailSub= Enter your email
 	ddangnhap.matkhau= Password:
+	ddangnhap.matkhauSub= Enter your password
 	ddangnhap.luutaikhoan= Remeber Me?
 	ddangnhap.quenmk= Forgot Password?
 	ddangnhap.chuacotk= Do not have an account? 
 	ddangnhap.dkngay=Register now
+	ddangnhap.gg=Sign In With Google
+	ddangnhap.fb=Sign In With Facebook
 	
 	#Đăng ký
 	ddangky.dangky=	SIGN UP
