--- a/ConverseStore_Java6/src/main/resources/i18n/global_vi.properties
+++ b/ConverseStore_Java6/src/main/resources/i18n/global_vi.properties
@@ -3,7 +3,7 @@
 	nav.product =SẢN PHẨM
 	nav.about = GIỚI THIỆU
 	nav.cart=GIỎ HÀNG
-	nav.language=NGÔN NGỮ
+	nav.language=ENGLISH
 	nav.account=TÀI KHOẢN
 	nav.vi=TIẾNG VIỆT
 	nav.en=TIẾNG ANH
@@ -129,11 +129,15 @@ foot.foot4Sub2=0105517236
 	#Đăng nhập
 	ddangnhap.dangnhap= ĐĂNG NHẬP
 	ddangnhap.email= Email:
+	ddangnhap.emailSub= Nhập email
 	ddangnhap.matkhau= Mật khẩu:
+	ddangnhap.matkhauSub= Nhập mật khẩu
 	ddangnhap.luutaikhoan= Lưu tài khoản?
 	ddangnhap.quenmk= Quên mật khẩu?
 	ddangnhap.chuacotk= Bạn chưa có tài khoản? 
 	ddangnhap.dkngay=Đăng ký ngay
+	ddangnhap.gg=Đăng nhập với Google
+	ddangnhap.fb=Đăng nhập với Facebook
 	
 	#Đăng ký
 	ddangky.dangky=	ĐĂNG KÝ
